--- a/package.json
+++ b/package.json
@@ -27,7 +27,6 @@
     "babel-loader": "^9.1.3",
     "babel-plugin-i18next-extract": "^0.9.0",
     "css-loader": "^6.8.1",
-    "eslint": "^8.46.0",
     "eslint-config-standard-with-typescript": "^37.0.0",
     "eslint-plugin-import": "^2.28.0",
     "eslint-plugin-n": "^16.0.1",
@@ -57,6 +56,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-i18next": "^13.0.2",
+    "react-loader-spinner": "^5.3.4",
     "react-router-dom": "^6.2.1"
   }
 }
